--- a/modules/module-1.1.qmd
+++ b/modules/module-1.1.qmd
@@ -48,7 +48,7 @@ Now go to Time and select the years from the last 50 years. Click Apply Changes,
 
 ## Reading data from a flat file
 
-{{< video https://www.youtube.com/embed/wo9vZccmqwc title='Reading Data From a .csv File' >}}
+{{< video https://youtu.be/WU_S7u2IsUs title='Reading Data From a Flat File' >}}
 
 Now we are going to read this messy World Bank data into R using the `read_csv()` function from the `readr` package. [readr](https://readr.tidyverse.org/) is a collection of functions that parses data from a flat file into a *tibble*, the modern Tidyverse version of a data frame. After we have read the data  into R, we are going to have a look at it with the [glimpse()](https://dplyr.tidyverse.org/reference/glimpse.html) function from the [dplyr](https://dplyr.tidyverse.org/index.html) package.
 
