--- a/modules/module-1.1.qmd
+++ b/modules/module-1.1.qmd
@@ -123,7 +123,7 @@ Notice that when we specify the years in our `pivot_longer()` call we encapsulat
 
 ## Truncating strings and changing variable types
 
-{{< video https://www.youtube.com/embed/wo9vZccmqwc title='Truncating Variable Names and Changing to Numeric' >}}
+{{< video https://youtu.be/syG5cdmtXSo title='Truncating Strings and Changing Variable Types' >}}
 
 Now that our data are transposed, we can start to work on some other key issues. Notice that the year is stored in the weird way in which it was imported--as a character (or string) with both the year and the year in brackets, e.g. 1972 [YR1972]. Notice that `flfp` is also stored as a character whereas it should be numeric. 
 
